if(TARGET_GROUP STREQUAL DemoThreadSafeQueue)
  add_subdirectory(ThreadSafeQueue)
elseif(TARGET_GROUP STREQUAL DemoActiveObject)
  add_subdirectory(ActiveObject)
elseif(TARGET_GROUP STREQUAL DemoToasterActiveObject)
  add_subdirectory(ThreadSafeQueue)
  add_subdirectory(ToasterActiveObject)
  add_subdirectory(BoostDeadlineTimer)
elseif(TARGET_GROUP STREQUAL DemoBoostDeadlineTimer)
  add_subdirectory(BoostDeadlineTimer)
elseif(TARGET_GROUP STREQUAL test)
  add_subdirectory(ActiveObject)
  add_subdirectory(ThreadSafeQueue)
  add_subdirectory(ToasterActiveObject)
  add_subdirectory(BoostDeadlineTimer)
endif()
